--- a/src/view/app-style.css
+++ b/src/view/app-style.css
@@ -14,9 +14,10 @@ fieldset{
    margin: 20px 30px;
 }
 p{
-   font-size: 14px;
+   font-size: 16px;
    text-shadow: 0 -1px 3px #f5f5f5;
-   margin: 15px;
+   margin: 30px 15px;
+   text-indent: 32px;
 }
 
 
